--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
-    "ethers": "^6.13.5"
+    "ethers": "^6.13.5",
+    "p-retry": "^6.2.1"
   }
 }
