--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,11 @@ jobs:
         with:
           node-version: 22
       - run: npm ci
+        env: 
+          RPC_AUTH: ${{secrets.RPC_AUTH}}
       - run: npm run test:unit
+        env:
+          RPC_AUTH: ${{secrets.RPC_AUTH}}
 
   lint:
     runs-on: ubuntu-latest
