--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
           node-version: 22
       - run: npm ci
         env:
-          RPC_AUTH: ${{secrets.RPC_AUTH}}
+          RPC_AUTH: ${{secrets.GLIF_API_TOKEN}}
       - run: npm run test:unit
         env:
           RPC_AUTH: ${{secrets.RPC_AUTH}}
