--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
           RPC_AUTH: ${{secrets.GLIF_API_TOKEN}}
       - run: npm run test:unit
         env:
-          RPC_AUTH: ${{secrets.RPC_AUTH}}
+          RPC_AUTH: ${{secrets.GLIF_API_TOKEN}}
 
   lint:
     runs-on: ubuntu-latest
