--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,8 @@ jobs:
           node-version: 22
       - run: npm ci
       - run: npm run test:unit
+        env:
+          RPC_AUTH: ${{secrets.RPC_AUTH}}
 
   lint:
     runs-on: ubuntu-latest
