--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^22.13.12",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.4",
+    "ethers": "^6.13.5",
     "neostandard": "^0.12.1",
     "prettier": "^3.5.3",
     "typescript": "^5.8.2"
