--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test:types": "tsc -p .",
     "lint": "eslint && prettier --check .",
     "lint:fix": "eslint --fix && prettier . --write",
-    "test": "npm run lint && npm run test:types && npm run test:unit"
+    "test": "npm run lint && npm run test:types && npm run test:unit",
+    "release": "np"
   },
   "repository": {
     "type": "git",
