feat: peer id miner info lookup (#7)
* add peer-id lookup

* smart contract peer id lookup

* fmt

* Update lib/smart-contract-client.js

Co-authored-by: Julian Gruber <julian@juliangruber.com>

* Update lib/smart-contract-client.js

Co-authored-by: Julian Gruber <julian@juliangruber.com>

* Update lib/smart-contract-client.js

Co-authored-by: Julian Gruber <julian@juliangruber.com>

* Update lib/smart-contract-client.js

Co-authored-by: Julian Gruber <julian@juliangruber.com>

* fmt

* Update lib/smart-contract-client.js

Co-authored-by: Julian Gruber <julian@juliangruber.com>

* move tests

* test files

* rpc files

* add smart contract fail test

* resolve PR threads

* process environment

* remove log

* lint]

* add secret to workflow

* lint

* Update .github/workflows/ci.yml

Co-authored-by: Miroslav Bajtoš <oss@bajtos.net>

* change authentication

* resolve PR threads

* resolve PR threads

* update readme

* reset README

* fmt

* readme

* Update .github/workflows/ci.yml

Co-authored-by: Miroslav Bajtoš <oss@bajtos.net>

* resolved Merge conflicts

* Update .github/workflows/ci.yml

Co-authored-by: Julian Gruber <julian@juliangruber.com>

* readme

* fmt

* secret

* add files

* copy paste from existing code repos

* make the rpc config optional

* include stack trace

* use abort signal

* comments

* remove log

* remove test file

* non optional

* Update lib/filecoin-rpc-client.js

Co-authored-by: Julian Gruber <julian@juliangruber.com>

---------

Co-authored-by: Julian Gruber <julian@juliangruber.com>
Co-authored-by: Miroslav Bajtoš <oss@bajtos.net>
Co-authored-by: Nikolas Haimerl <nhaimerl@Nikolass-MacBook-Pro.local>

--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "neostandard": "^0.12.1",
     "prettier": "^3.5.3",
     "typescript": "^5.8.2"
+  },
+  "dependencies": {
+    "p-retry": "^6.2.1"
   }
 }
