feat: get peer index provider (#10)
* add peer-id lookup

* smart contract peer id lookup

* fmt

* Update lib/smart-contract-client.js

Co-authored-by: Julian Gruber <julian@juliangruber.com>

* Update lib/smart-contract-client.js

Co-authored-by: Julian Gruber <julian@juliangruber.com>

* Update lib/smart-contract-client.js

Co-authored-by: Julian Gruber <julian@juliangruber.com>

* Update lib/smart-contract-client.js

Co-authored-by: Julian Gruber <julian@juliangruber.com>

* fmt

* Update lib/smart-contract-client.js

Co-authored-by: Julian Gruber <julian@juliangruber.com>

* move tests

* test files

* rpc files

* add smart contract fail test

* resolve PR threads

* process environment

* remove log

* lint]

* add secret to workflow

* lint

* Update .github/workflows/ci.yml

Co-authored-by: Miroslav Bajtoš <oss@bajtos.net>

* change authentication

* resolve PR threads

* resolve PR threads

* update readme

* reset README

* fmt

* readme

* Update .github/workflows/ci.yml

Co-authored-by: Miroslav Bajtoš <oss@bajtos.net>

* resolved Merge conflicts

* Update .github/workflows/ci.yml

Co-authored-by: Julian Gruber <julian@juliangruber.com>

* readme

* fmt

* secret

* add files

* copy paste from existing code repos

* make the rpc config optional

* include stack trace

* use abort signal

* comments

* remove log

* copy paste from existing code repos

* add tests for getindexpeerid

* remove test file

* non optional

* readme

* publish command

* publish command

* Update README.md

Co-authored-by: Julian Gruber <julian@juliangruber.com>

* Update README.md

Co-authored-by: Julian Gruber <julian@juliangruber.com>

* add test file

* add test file

* Update README.md

Co-authored-by: Julian Gruber <julian@juliangruber.com>

* Update index.js

Co-authored-by: Julian Gruber <julian@juliangruber.com>

* Update index.js

Co-authored-by: Julian Gruber <julian@juliangruber.com>

* document rpc function

* lint

* change get index provider signature

* Updat

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test:types": "tsc -p .",
     "lint": "eslint && prettier --check .",
     "lint:fix": "eslint --fix && prettier . --write",
-    "test": "npm run lint && npm run test:types && npm run test:unit"
+    "test": "npm run lint && npm run test:types && npm run test:unit",
+    "release": "np"
   },
   "repository": {
     "type": "git",
@@ -24,13 +25,14 @@
   "devDependencies": {
     "@types/node": "^22.13.15",
     "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-prettier": "^5.2.5",
-    "ethers": "^6.13.5",
+    "eslint-plugin-prettier": "^5.2.4",
     "neostandard": "^0.12.1",
+    "np": "^10.2.0",
     "prettier": "^3.5.3",
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "ethers": "^6.13.5",
     "p-retry": "^6.2.1"
   }
 }
