--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint && prettier --check .",
     "lint:fix": "eslint --fix && prettier . --write",
     "test": "npm run lint && npm run test:types && npm run test:unit",
-    "release": "np"
+    "release": "tsc -p . && git add dist && np"
   },
   "repository": {
     "type": "git",
